--- a/blogs/amazon/amaz.html
+++ b/blogs/amazon/amaz.html
@@ -39,17 +39,17 @@
             <div class="gta5-card color1" style="color: #1b5e20;">
               <h1>🌱 Recommended Gardening Tools</h1>
               <ul class="amazon-list">
-                <li><a href="https://www.amazon.in/dp/B08YDSPGGY?ref=ppx_yo2ov_dt_b_fed_asin_title&th=1"
+                <li><a href="https://amzn.to/4mysZIN"
                     target="_blank">D&V ENGINEERING - Creative in innovation Metal Pot Stand, Flower plant stand for
                     balcony, Black, 73.5 cm Wide - Set of 4</a></li>
-                <li><a href="https://www.amazon.in/dp/B0CXS74MYN?ref=ppx_yo2ov_dt_b_fed_asin_title&th=1"
+                <li><a href="https://amzn.to/3Jc1dnd"
                     target="_blank">PAmazon Brand - Solimo Metal Flower Pot Stand (Black, Set of 8, Round) | Gamla Stand
                     for Home | Plant Stand for Balcony | Premium Flower Pot Stand | Plant Stand for Living Room</a></li>
                 <li><a
-                    href="https://www.amazon.in/Gardening-Tools-Item-Garden-Tool/dp/B0CBPBRPDD/ref=sr_1_1_sspa?crid=VTUTAYTS2K27&dib=eyJ2IjoiMSJ9.P_BKfIvJHdfYPaLyhOzDz-_zaZ1zQoXLZSTrtaoAFNQLbXYJBLmTWZCMR8WyRBwG4CmLVPJWGVHo7CmYPAVBln6qHVnQ38LAI7x1jrRaQTWTswGTlvt2gbrmVQVbm3UVCAmlPYm3lfhLsQPm5x492_HUIpO0bar64zmCekJlg78eF57cK8Lt7nWmiPTffhW8vfGP-ljGgZ3HC0SwAltrHviwZlgNI6rSzsrJjoKPMO9141-B78hmydLuPgs-bPaTbpV1-UNkyt6P6Vnhm184kA4ASqZAAsGqWglawCb4NyE.O7fbBwQHr9wtrOsxXW10R3C8Oq5kvCsWU60Pok5ZsqE&dib_tag=se&keywords=gardening+tools+kit+for+home+garden&qid=1754600065&s=garden&sprefix=gardening+t%2Clawngarden%2C276&sr=1-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1"
+                    href="https://amzn.to/46RSvEp"
                     target="_blank">AGT Gardening Tools kit 9 Item Garden Tool Kit (9 Tools)</a></li>
                 <li><a
-                    href="https://www.amazon.in/Amazon-Brand-8-Piece-Gardening-Cultivator/dp/B0D673FG7H/ref=sr_1_4?crid=VTUTAYTS2K27&dib=eyJ2IjoiMSJ9.P_BKfIvJHdfYPaLyhOzDz-_zaZ1zQoXLZSTrtaoAFNQLbXYJBLmTWZCMR8WyRBwG4CmLVPJWGVHo7CmYPAVBln6qHVnQ38LAI7x1jrRaQTWTswGTlvt2gbrmVQVbm3UVCAmlPYm3lfhLsQPm5x492_HUIpO0bar64zmCekJlg78eF57cK8Lt7nWmiPTffhW8vfGP-ljGgZ3HC0SwAltrHviwZlgNI6rSzsrJjoKPMO9141-B78hmydLuPgs-bPaTbpV1-UNkyt6P6Vnhm184kA4ASqZAAsGqWglawCb4NyE.O7fbBwQHr9wtrOsxXW10R3C8Oq5kvCsWU60Pok5ZsqE&dib_tag=se&keywords=gardening%2Btools%2Bkit%2Bfor%2Bhome%2Bgarden&qid=1754600065&s=garden&sprefix=gardening%2Bt%2Clawngarden%2C276&sr=1-4&th=1"
+                    href="https://amzn.to/4m5YDh7"
                     target="_blank">Amazon Brand - Solimo 8-Piece Gardening Tool Kit | Cultivator, Fork, Trowels,
                     Weeder, Garden Gloves, Pruner Cutter, and Scissor | Gardening Tools Set for Home Gardens</a></li>
                 <li><a href="https://amzn.in/d/cYxSoJK" target="_blank">Ugaoo Organic Vermicompost Fertilizer Manure For
@@ -64,16 +64,16 @@
             <div class="gta5-card color1" style="color: #d35400">
               <h1>🍽️ Must-Have Kitchen Essentials</h1>
               <ul class="amazon-list">
-                <li><a href="https://amzn.in/d/dL1L25w" target="_blank">Tupperware New Smart Saver Plastic Container
+                <li><a href="https://amzn.to/47o5bD8" target="_blank">Tupperware New Smart Saver Plastic Container
                     Set, 2.3 Litres, Set of 4, Transparent</a></li>
-                <li><a href="https://amzn.in/d/21qqfGH" target="_blank">Tupperware New Smart Saver Plastic Container
+                <li><a href="https://amzn.to/4m9VgFM" target="_blank">Tupperware New Smart Saver Plastic Container
                     Set, 1.7 litres, Set of 4, Transparent</a></li>
-                <li><a href="https://amzn.in/d/5uPQaV1" target="_blank">Tupperware Mm Round 2 Containers- 440 Ml
+                <li><a href="https://amzn.to/4melION" target="_blank">Tupperware Mm Round 2 Containers- 440 Ml
                     Capacity- Set Of 8 Pc- Red Seal(Plastic), Blue-Green</a></li>
                 <li><a href="https://amzn.in/d/5208Ap0" target="_blank">Signoraware Modular BPA Free Plastic Square
                     Container | Dishwasher safe | Airtight & Leakproof | Kitchen & Pantry Storage | Ideal for Atta, Rice
                     & Sugar Storage | Multipurpose ( ModBlue | 6.5 Ltr )</a></li>
-                <li><a href="https://amzn.in/d/dXHrZKa" target="_blank">KASHIVAL Kitchen Self Adhesive Oil Proof Sticker
+                <li><a href="https://amzn.to/3HtCeLt" target="_blank">KASHIVAL Kitchen Self Adhesive Oil Proof Sticker
                     Waterproof Contact Paper Foil Sticker Kitchen Wallpaper Removable Heat Resistant (Size : 60 * 200
                     cm) (Blue Marble A31)</a></li>
               </ul>
@@ -83,25 +83,25 @@
             <div class="gta5-card color1" style="color: #6e2c00">
               <h1>🛏️ Home & Furnishing Must-Haves</h1>
               <ul class="amazon-list">
-                <li><a href="https://amzn.in/d/0cz1xHq" target="_blank">Linenovation 1000GSM Hollow Fibre Mattress
+                <li><a href="https://amzn.to/45za4Ha" target="_blank">Linenovation 1000GSM Hollow Fibre Mattress
                     Padding/Topper White for Queen Bed-60 Inch X 78 Inch</a></li>
-                <li><a href="https://amzn.in/d/iLthdIc" target="_blank">Cotton Thick Bench Cushion Chair Pad - Cushion
+                <li><a href="https://amzn.to/412UlyC" target="_blank">Cotton Thick Bench Cushion Chair Pad - Cushion
                     Lightweight Table Stool Back Seat Cushion Yoga Chair Pad Cotton Cushion 3-Seater Bench Cushion, 150
                     X 50 X 8 Cm (Grey)</a></li>
-                <li><a href="https://amzn.in/d/fZ5F6YK" target="_blank">LA VERNE Virgin Microfibre Blown Technology
+                <li><a href="https://amzn.to/45cVqq5" target="_blank">LA VERNE Virgin Microfibre Blown Technology
                     Filled Quilted Anti Bacterial Cloth Sleeping Pillow Pack of 2 (27X16 Inch) (Off White)</a></li>
-                <li><a href="https://amzn.in/d/f01v7sW" target="_blank">Yellow Weaves Velvet 5 Seater Quilted Sofa Cover
+                <li><a href="https://amzn.to/45GRjTj" target="_blank">Yellow Weaves Velvet 5 Seater Quilted Sofa Cover
                     and Chair Cover, Seat & Back Cover, Color - Light Grey</a></li>
-                <li><a href="https://amzn.in/d/65rVz7C" target="_blank">Swayam Diwan Set Cotton 6 Piece Diwan Printed
+                <li><a href="https://amzn.to/47pc86Y" target="_blank">Swayam Diwan Set Cotton 6 Piece Diwan Printed
                     Bedsheet Set for Living Room Hall (Set of 6 Piece, 1 Diwan Sheet | 2-Bolster Cover | 3 Cushion
                     Covers) Soft Feel,Light Grey White</a></li>
-                <li><a href="https://amzn.in/d/gpaXlHh" target="_blank">Haus & Kinder Bedsheet,100% Cotton Double Bed
+                <li><a href="https://amzn.to/3HtDTAM" target="_blank">Haus & Kinder Bedsheet,100% Cotton Double Bed
                     Bed Sheet, 186 TC Pure Cotton Bedsheet for Queen Size Bed, Cotton Double Bedsheets with 2 Pillow
                     Covers,White Grid</a></li>
-                <li><a href="https://amzn.in/d/cQBeIOx" target="_blank">BSB HOME Pencil Pattern Flannel Fleece Sherpa
+                <li><a href="https://amzn.to/4mk7trS" target="_blank">BSB HOME Pencil Pattern Flannel Fleece Sherpa
                     Blanket 220 X 150 Cm, Soft, Plush, Fluffy Season/Ac and Mild Winter Reversible Blanket - Single Bed
                     (Colour- Aqua, Weight - 1.6 Kg), 300 TC</a></li>
-                <li><a href="https://amzn.in/d/ht9edzT" target="_blank">HOMEMONDE Premium Plush Solid Summer Single Bed
+                <li><a href="https://amzn.to/4oqLvEN" target="_blank">HOMEMONDE Premium Plush Solid Summer Single Bed
                     Dohar/AC Blanket | 220 GSM Reversible Lightweight Cozy Soft for Bed, Sofa, Couch, Travel & Camping |
                     140x229 Cm - Pink</a></li>
               </ul>
