--- a/tools/tools.html
+++ b/tools/tools.html
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div id="tab-codeeditors" class="howto-tab-content" style="display:none;">
-          <p class="howto-tab-title blogs-amazon-subheading">Explore delicious recipes, kitchen hacks, and cooking tips.
+          <p class="howto-tab-title blogs-amazon-subheading">Easy Code Editing Solutions.
           </p>
           <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
             <div class="howto-card color6">
@@ -96,6 +96,13 @@
                 <p>Write and edit code directly in your browser.</p>
               </a>
             </div>
+            <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+              <div class="howto-card color6">
+                <a href="/tools/codeEditors/json-formatter.html">
+                  <h4>JSON Formattor</h4>
+                  <p>Format and play with JSON code.</p>
+                </a>
+              </div>
 
           </div>
         </div>
