--- a/tools/tools.html
+++ b/tools/tools.html
@@ -17,7 +17,7 @@
   <main>
     <section class="blogs-main-category">
       <h3>Tools</h3>
-      <p>Find Useful daily use tools to make life Easy.</p>
+      <p>Find daily use tools to make life easy. Still doing the boring chores manually, NO more!</p>
       <nav class="blogs-main-category-menu">
         <ul>
           <li><a href="#" class="howto-tab-btn active" data-tab="date">Date & Time</a></li>
@@ -104,55 +104,98 @@
                 </a>
               </div>
 
+            </div>
           </div>
-        </div>
-        <div id="tab-productivity" class="howto-tab-content" style="display:none;">
-          <p class="howto-tab-title blogs-amazon-subheading">Hardware guides, setup tips, and troubleshooting help.</p>
-          <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
-            <div class="howto-card color1">
-              <a href="/tools/productivity/case-convertor.html">
-                <h4>Case Convertor</h4>
-                <p>Change text between uppercase, lowercase, and more.</p>
-              </a>
-            </div>
-            <div class="howto-card color2">
-              <a href="/tools/productivity/notepad.html">
-                <h4>Notepad</h4>
-                <p>Take quick notes and save them online.</p>
-              </a>
-            </div>
-            <div class="howto-card color3">
-              <a href="/tools/productivity/pdf-splitter.html">
-                <h4>PDF Splitter</h4>
-                <p>Split PDF files into separate pages.</p>
-              </a>
-            </div>
+          <div id="tab-productivity" class="howto-tab-content" style="display:none;">
+            <p class="howto-tab-title blogs-amazon-subheading">Hardware guides, setup tips, and troubleshooting help.
+            </p>
+            <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+              <div class="howto-card color1">
+                <a href="/tools/productivity/case-convertor.html">
+                  <h4>Case Convertor</h4>
+                  <p>Change text between uppercase, lowercase, and more.</p>
+                </a>
+              </div>
+              <div class="howto-card color2">
+                <a href="/tools/productivity/notepad.html">
+                  <h4>Notepad</h4>
+                  <p>Take quick notes and save them online.</p>
+                </a>
+              </div>
+              <div class="howto-card color3">
+                <a href="/tools/productivity/pdf-splitter.html">
+                  <h4>PDF Splitter</h4>
+                  <p>Split PDF files into separate pages.</p>
+                </a>
+              </div>
 
-          </div>
-        </div>
-        <div id="tab-creativity" class="howto-tab-content" style="display:none;">
-          <p class="howto-tab-title blogs-amazon-subheading">Hardware guides, setup tips, and troubleshooting help.
-          </p>
-          <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
-            <div class="howto-card color4">
-              <a href="/tools/creativity/forlater-countdown.html">
-                <h4>ForLater Countdown</h4>
-                <p>Set a countdown for important events.</p>
-              </a>
             </div>
+          </div>
+          <div id="tab-creativity" class="howto-tab-content" style="display:none;">
+            <p class="howto-tab-title blogs-amazon-subheading">Hardware guides, setup tips, and troubleshooting help.
+            </p>
+            <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+              <div class="howto-card color4">
+                <a href="/tools/creativity/forlater-countdown.html">
+                  <h4>ForLater Countdown</h4>
+                  <p>Set a countdown for important events.</p>
+                </a>
+              </div>
 
+            </div>
           </div>
         </div>
-      </div>
-      <p class="blogs-amazon-subheading">Want to see more tools?</p>
-      <div class="blogs-btn-wrapper">
-        <a class="btn" href="#">See All</a>
-      </div>
-      <!-- <button onclick="window.location.href='/blogs/blogs.html'" class="btn">← Go Back</button> -->
+        <p class="blogs-amazon-subheading">Want to see more tools?</p>
+        <div class="blogs-btn-wrapper">
+          <a class="btn" href="#">See All</a>
+        </div>
+        <!-- <button onclick="window.location.href='/blogs/blogs.html'" class="btn">← Go Back</button> -->
     </section>
 
   </main>
   <div id="footer"></div>
 </body>
+<script>
+  // Enhanced search: show matching cards and switch to the correct tab if needed
+  document.getElementById('searchBar').addEventListener('input', function (e) {
+    const query = e.target.value.toLowerCase();
+    const cards = document.querySelectorAll('.howto-card');
+    let foundTab = null;
+
+    cards.forEach(card => {
+      const text = card.textContent.toLowerCase();
+      if (text.includes(query)) {
+        card.style.display = '';
+        // Find parent tab for the first match
+        if (!foundTab) {
+          let tabContent = card.closest('.howto-tab-content');
+          if (tabContent && tabContent.id) {
+            foundTab = tabContent.id.replace('tab-', '');
+          }
+        }
+      } else {
+        card.style.display = 'none';
+      }
+    });
+
+    // If a match is found in another tab, switch to that tab
+    if (foundTab) {
+      // Hide all tabs
+      document.querySelectorAll('.howto-tab-content').forEach(tab => {
+        tab.style.display = 'none';
+      });
+      // Remove active class from all tab buttons
+      document.querySelectorAll('.howto-tab-btn').forEach(btn => {
+        btn.classList.remove('active');
+      });
+      // Show the found tab
+      const showTab = document.getElementById('tab-' + foundTab);
+      if (showTab) showTab.style.display = 'block';
+      // Set active class on the corresponding tab button
+      const activeBtn = document.querySelector('.howto-tab-btn[data-tab="' + foundTab + '"]');
+      if (activeBtn) activeBtn.classList.add('active');
+    }
+  });
+</script>
 
 </html>
