homepage and links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>Ultimatrix</title>
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/header-footer.css" />
+  <link rel="stylesheet" href="/css/games.css" />
+  <link rel="stylesheet" href="/css/blogs.css" />
   <script src="/js/script.js" defer></script>
+  <script src="/js/tools.js" defer></script>
 </head>
 
 <body>
@@ -61,18 +64,18 @@
         <div>
           <div id="worldNews">
             <!-- <img class = "news-section-img"src="" alt=""> -->
-            <a href="https://latest.ultimatrix.co.in" class="news-section-heading">World News</a>
+            <a href="/news/news.html" class="news-section-heading">World News</a>
             <p class="news-section-desc">Stay in the know with global headlines that matter.</p>
           </div>
           <div id="sportsNews">
             <!-- <img class = "news-section-img"src="" alt=""> -->
-            <a href="https://latest.ultimatrix.co.in" class="news-section-heading">Sports News</a>
+            <a href="/news/news.html" class="news-section-heading">Sports News</a>
             <p class="news-section-desc">Big plays. Bigger moments. Whether it's a match-winning six or a buzzer-beater,
               we’ve got the highlights, heartbreaks, and heroics.</p>
           </div>
           <div id="trending">
             <!-- <img class = "news-section-img"src="" alt=""> -->
-            <a href="https://latest.ultimatrix.co.in" class="news-section-heading">Trending</a>
+            <a href="/news/news.html" class="news-section-heading">Trending</a>
             <p class="news-section-desc">From viral videos to cultural shakeups, here’s what the internet can't stop
               talking about.</p>
           </div>
@@ -84,7 +87,7 @@
           <div></div>
         </div>
       </div>
-      <a href="https://latest.ultimatrix.co.in" class="btn">Go to News</a>
+      <a href="/news/news.html" class="btn">Go to News</a>
     </section>
 
     <!-- Featured Blog -->
@@ -104,14 +107,91 @@
           <p class="blogs-section-desc">Latest styling ideas to reinvent your wardrobe.</p>
         </div>
       </div>
-      <a href="blogs/blogs.html" class="btn">Go to Blogs</a>
+      <a href="/blogs/blogs.html" class="btn">Go to Blogs</a>
+      <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+        <div class="howto-card color1">
+          <a href="/blogs/travel/travel.html">
+            <h4>Travelling</h4>
+            <p>Mist wraps the hills like a secret, and the clouds drift low, whispering tales only silence understands. Each breath of fog feels like a hidden chapter unfolding across the ridges.</p>
+          </a>
+        </div>
+        <div class="howto-card color2">
+          <a href="/blogs/social/social.html">
+            <h4>Socisl Life</h4>
+            <p>Explore social media trends, content creation, and digital culture shaping our world.</p>
+          </a>
+        </div>
+        <div class="howto-card color3">
+          <a href="/blogs/edu/edu.html">
+            <h4>Education</h4>
+            <p>Develop analytical skills essential for academic success and beyond.</p>
+          </a>
+        </div>
+        <div class="howto-card color4">
+          <a href="/blogs/howto/howto.html">
+            <h4>How To</h4>
+            <p>Discover coding tutorials, tips, and resources for developers.</p>
+          </a>
+        </div>
+        <div class="howto-card color5">
+          <a href="/blogs/inspiration/inspiration.html">
+            <h4>Inspiration</h4>
+            <p>Read how ordinary people overcame extraordinary odds and found success.</p>
+          </a>
+        </div>
+        <div class="howto-card color6">
+          <a href="/blogs/fashion/fashion.html">
+            <h4>Fashion</h4>
+            <p>Latest styling ideas to reinvent your wardrobe.</p>
+          </a>
+        </div>
+      </div>
     </section>
 
     <!-- Tools -->
     <section class="daily-dose">
       <h3>Tools</h3>
       <p>Find Useful daily use tools to make life Easy .</p>
-      <a href="tools/tools.html" class="btn">Go to Tools</a>
+      <a href="/tools/tools.html" class="btn">Go to Tools</a>
+      <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+        <div class="howto-card color1">
+          <a href="/tools/dateAndTime/clock.html">
+            <h4>Clock</h4>
+            <p>View the current time in your timezone.</p>
+          </a>
+        </div>
+        <div class="howto-card color2">
+          <a href="/tools/dateAndTime/date-adder.html">
+            <h4>Date Adder</h4>
+            <p>Add days, months, or years to any date.</p>
+          </a>
+        </div>
+        <div class="howto-card color3">
+          <a href="/tools/dateAndTime/date-duration.html">
+            <h4>Date Duration</h4>
+            <p>Calculate the duration between two dates.</p>
+          </a>
+        </div>
+        <div class="howto-card color4">
+          <a href="/tools/calculators/age-calculator.html">
+            <h4>Age Calculator</h4>
+            <p>Calculate your age from your birthdate.</p>
+          </a>
+        </div>
+        <div class="howto-card color5">
+          <a href="/tools/calculators/word-counter.html">
+            <h4>Word Counter</h4>
+            <p>Count words, characters, and paragraphs in your text.</p>
+          </a>
+        </div>
+        <div class="howto-card color6">
+          <a href="/tools/codeEditors/code-editor.html">
+            <h4>Code Editor</h4>
+            <p>Write and edit code directly in your browser.</p>
+          </a>
+        </div>
+      </div>
+      
     </section>
   </main>
   <div id="footer"></div>
