06Sep25|Search script

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="hero">
       <h2>Bored? Snap out of it—your ultimate escape is here!</h2>
       <p>From games and news to blogs, photos, and inspiration—your next favorite thing is waiting.</p>
-      <img class="hero-img" src="/assets/img/your-image.jpg" alt="Passion fruit and floral drink on a surface" />
+      <img class="hero-img" src="/assets/img/homee-2.png" alt="Passion fruit and floral drink on a surface" />
     </section>
 
     <section class="daily-dose">
