--- a/tools/tools.html
+++ b/tools/tools.html
@@ -37,16 +37,13 @@
         <input class="search-bar" type="text" id="searchBar" placeholder="Search tools..." />
       </div>
     </section>
-    <!-- <section class="hero">
-      <img class="hero-img" src="/assets/img/your-image.jpg" alt="Passion fruit and floral drink on a surface" />
-    </section> -->
 
     <!-- Tools -->
     <section>
       <div id="howto-tabs">
         <div id="tab-date" class="howto-tab-content" style="display:block;">
           <p class="blogs-amazon-subheading">Discover coding tutorials, tips, and resources for developers.</p>
-          <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+          <div class="howto-tabs-cards">
             <div class="howto-card color1">
               <a href="/tools/dateAndTime/clock.html">
                 <h4>Clock</h4>
@@ -70,7 +67,7 @@
         <div id="tab-calculators" class="howto-tab-content" style="display:none;">
           <p class="howto-tab-title blogs-amazon-subheading">Discover handy tools, utilities, and productivity boosters.
           </p>
-          <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+          <div class="howto-tabs-cards">
             <div class="howto-card color4">
               <a href="/tools/calculators/age-calculator.html">
                 <h4>Age Calculator</h4>
@@ -89,27 +86,24 @@
         <div id="tab-codeeditors" class="howto-tab-content" style="display:none;">
           <p class="howto-tab-title blogs-amazon-subheading">Easy Code Editing Solutions.
           </p>
-          <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+          <div class="howto-tabs-cards">
             <div class="howto-card color6">
               <a href="/tools/codeEditors/code-editor.html">
                 <h4>Code Editor</h4>
                 <p>Write and edit code directly in your browser.</p>
               </a>
             </div>
-            <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
-              <div class="howto-card color6">
-                <a href="/tools/codeEditors/json-formatter.html">
-                  <h4>JSON Formattor</h4>
-                  <p>Format and play with JSON code.</p>
-                </a>
-              </div>
-
+            <div class="howto-card color6">
+              <a href="/tools/codeEditors/json-formatter.html">
+                <h4>JSON Formattor</h4>
+                <p>Format and play with JSON code.</p>
+              </a>
             </div>
           </div>
           <div id="tab-productivity" class="howto-tab-content" style="display:none;">
             <p class="howto-tab-title blogs-amazon-subheading">Hardware guides, setup tips, and troubleshooting help.
             </p>
-            <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+            <div class="howto-tabs-cards">
               <div class="howto-card color1">
                 <a href="/tools/productivity/case-convertor.html">
                   <h4>Case Convertor</h4>
@@ -134,7 +128,7 @@
           <div id="tab-creativity" class="howto-tab-content" style="display:none;">
             <p class="howto-tab-title blogs-amazon-subheading">Hardware guides, setup tips, and troubleshooting help.
             </p>
-            <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+            <div class="howto-tabs-cards">
               <div class="howto-card color4">
                 <a href="/tools/creativity/forlater-countdown.html">
                   <h4>ForLater Countdown</h4>
@@ -147,7 +141,7 @@
         </div>
         <p class="blogs-amazon-subheading">Want to see more tools?</p>
         <div class="blogs-btn-wrapper">
-          <a class="btn" href="#">See All</a>
+          <a class="btn" href="/tools/tools-all.html">See All Tools</a>
         </div>
         <!-- <button onclick="window.location.href='/blogs/blogs.html'" class="btn">← Go Back</button> -->
     </section>
@@ -155,47 +149,5 @@
   </main>
   <div id="footer"></div>
 </body>
-<script>
-  // Enhanced search: show matching cards and switch to the correct tab if needed
-  document.getElementById('searchBar').addEventListener('input', function (e) {
-    const query = e.target.value.toLowerCase();
-    const cards = document.querySelectorAll('.howto-card');
-    let foundTab = null;
-
-    cards.forEach(card => {
-      const text = card.textContent.toLowerCase();
-      if (text.includes(query)) {
-        card.style.display = '';
-        // Find parent tab for the first match
-        if (!foundTab) {
-          let tabContent = card.closest('.howto-tab-content');
-          if (tabContent && tabContent.id) {
-            foundTab = tabContent.id.replace('tab-', '');
-          }
-        }
-      } else {
-        card.style.display = 'none';
-      }
-    });
-
-    // If a match is found in another tab, switch to that tab
-    if (foundTab) {
-      // Hide all tabs
-      document.querySelectorAll('.howto-tab-content').forEach(tab => {
-        tab.style.display = 'none';
-      });
-      // Remove active class from all tab buttons
-      document.querySelectorAll('.howto-tab-btn').forEach(btn => {
-        btn.classList.remove('active');
-      });
-      // Show the found tab
-      const showTab = document.getElementById('tab-' + foundTab);
-      if (showTab) showTab.style.display = 'block';
-      // Set active class on the corresponding tab button
-      const activeBtn = document.querySelector('.howto-tab-btn[data-tab="' + foundTab + '"]');
-      if (activeBtn) activeBtn.classList.add('active');
-    }
-  });
-</script>
 
 </html>
